[project]
name = "edboplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "botorch==0.5.0",
    "gpytorch==1.5.1",
    "idaes-pse==1.5.1",
    "ipykernel==6.5.1",
    "ipython==7.29.0",
    "ipywidgets==7.6.5",
    "jinja2==3.0.3",
    "joypy==0.2.6",
    "lxml==4.6.4",
    "matplotlib>=3.7.5",
    "mordred==1.2.0",
    "numpy==1.22.4",
    "ordered-set==4.0.2",
    "pandas==1.3.4",
    "pareto==1.1.1.post3",
    "pymoo==0.5.0",
    "scikit-learn==1.0.2",
    "scipy==1.7.3",
    "seaborn>=0.13.2",
    "sympy==1.9",
    "torch==1.10.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.12.2",
]

[tool.uv.sources]
torch = { path = "./install_wheels/torch-1.10.2-cp39-cp39-win_amd64.whl" }

